--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -2,12 +2,12 @@
     width: 40rem;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1.5rem;
+    /* margin-top: 1.5rem; */
 }
 
 .heading-text {
     line-height: 2.1rem;
-    margin-top: 1.25rem;
+    margin-top: 1rem;
 }
 
 .margin_bottom {
