--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,5 +1,5 @@
 .heading {
-    width: 40rem;
+    max-width: 40rem;
     margin-left: auto;
     margin-right: auto;
     /* margin-top: 1.5rem; */
